--- a/digital-dash.css
+++ b/digital-dash.css
@@ -65,56 +65,50 @@ Fonts
 
 @font-face {
     font-family: 'font';
-    src: url('font.eot');
-    src: url('font.eot?#iefix') format('embedded-opentype'),
-    url('font.woff') format('woff'),
-    url('font.ttf') format('truetype'),
-    url('font.svg#font') format('svg');
+    src: url('font.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 html {
-    background: #000;
+    background: #FFF;
 }
 
 body {
-    font: 3em / 1 'font', Helvetica, Arial, sans-serif;
-    color: #fff;
+    font: 5vw 'font', Helvetica, Arial, sans-serif;
+    color: #000;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
-    margin: 10% 0% 20% 10%;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 14%;
+    margin-bottom: 20%;
 }
 
 h1 {
-    font-size: 1em;
+    font-size: 10vw;
+    color: rgba(0,0,0,.3);
 }
 
 h2 {
-    font-size: .8em;
+    font-size: 5vw;
     line-height: 1.3em;
-    color: #777;
+    color: #000;
     padding-top: 24px;
-}
-
-ul {
-    list-style: none;
-}
-
-li {
-    padding-top: 70px;
+    padding-bottom: 40px;
 }
 
 a {
     text-decoration: none;
-    color: #fff;
-    border-bottom: 4px solid #222;
-    padding-bottom: 10px;
+    color: #000;
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 14px;
+    transition: border-bottom 0.2s ease;
 }
 
 a:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 2px solid #000;
 }
 
 
@@ -123,11 +117,33 @@ a:hover {
 IPHONE
 =========================================== */
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:900px) {
     body {
-        margin: 16% 10% 20% 10%;
+        font-size: 10vw;
+        margin-top: 22%;
+    }
+    h1 {
+        font-size: 14vw;
+    }
+    h2 {
+        font-size: 10vw;
     }
 
 }
 
+/* @media (prefers-color-scheme: dark) {
+    html {
+        background: #000;
+    }
+    body {
+        color: #FFF;
+    }
+    a {
+        color: #FFF;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    a:hover {
+        border-bottom: 1px solid #FFF;
+    }
+} */
 
