--- a/digital-dash.css
+++ b/digital-dash.css
@@ -138,6 +138,9 @@ IPHONE
     body {
         color: #FFF;
     }
+    h1 {
+        color: rgba(255,255,255, .3);
+    }
     h2 {
         color: #FFF;
     }
