--- a/digital-dash.css
+++ b/digital-dash.css
@@ -88,21 +88,20 @@ body {
 
 h1 {
     font-size: 10vw;
-    color: rgba(0,0,0,.3);
+    color: #000;
 }
 
 h2 {
     font-size: 5vw;
     line-height: 1.3em;
-    color: #000;
-    padding-top: 24px;
+    color: rgba(0,0,0,.5);
     padding-bottom: 40px;
 }
 
 a {
     text-decoration: none;
     color: #000;
-    border-bottom: 2px solid #ddd;
+    border-bottom: 2px solid rgba(0,0,0,.1);
     padding-bottom: 14px;
     transition: border-bottom 0.2s ease;
 }
@@ -139,14 +138,14 @@ IPHONE
         color: #FFF;
     }
     h1 {
-        color: rgba(255,255,255, .3);
+        color: #FFF;
     }
     h2 {
-        color: #FFF;
+        color: rgba(255,255,255,.6);
     }
     a {
         color: #FFF;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        border-bottom: 1px solid rgba(255, 255, 255, .2);
     }
     a:hover {
         border-bottom: 1px solid #FFF;
