--- a/digital-dash.css
+++ b/digital-dash.css
@@ -118,14 +118,15 @@ IPHONE
 
 @media screen and (max-width:900px) {
     body {
-        font-size: 10vw;
+        font-size: 12vw;
         margin-top: 18%;
+        width: 90%;
     }
     h1 {
-        font-size: 14vw;
+        font-size: 16vw;
     }
     h2 {
-        font-size: 10vw;
+        font-size: 12vw;
     }
 
 }
